--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -141,15 +141,14 @@
 
 #navbar .sidebar {
   pointer-events: none;
-  z-index: 10;
   background: white;
   width: 65%;
   height: 100vh;
   position: absolute;
   top: 60px;
   right: -65%;
-  -webkit-transition: .7s ease-in-out;
   transition: .7s ease-in-out;
+  -webkit-transition: .7s ease-in-out;
 }
 
 #navbar .sidebar img {
@@ -195,32 +194,32 @@
 
 #navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(1) {
   opacity: 1;
-  -webkit-transition: all 1s ease-in-out 0.2s;
-  transition: all 1s ease-in-out 0.2s;
+  -webkit-transition: 1s ease-in-out 0.2s;
+  transition: 1s ease-in-out 0.2s;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(2) {
   opacity: 1;
-  -webkit-transition: all 1s ease-in-out 0.4s;
-  transition: all 1s ease-in-out 0.4s;
+  -webkit-transition: 1s ease-in-out 0.4s;
+  transition: 1s ease-in-out 0.4s;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(3) {
   opacity: 1;
-  -webkit-transition: all 1s ease-in-out 0.6s;
-  transition: all 1s ease-in-out 0.6s;
+  -webkit-transition: 1s ease-in-out 0.6s;
+  transition: 1s ease-in-out 0.6s;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(4) {
   opacity: 1;
-  -webkit-transition: all 1s ease-in-out 0.8s;
-  transition: all 1s ease-in-out 0.8s;
+  -webkit-transition: 1s ease-in-out 0.8s;
+  transition: 1s ease-in-out 0.8s;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(5) {
   opacity: 1;
-  -webkit-transition: all 1s ease-in-out 1s;
-  transition: all 1s ease-in-out 1s;
+  -webkit-transition: 1s ease-in-out 1s;
+  transition: 1s ease-in-out 1s;
 }
 
 #navbar .sidebar.active {
