--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -113,14 +113,14 @@ $primaryColor: #2d9cb3;
     }
     .sidebar{
         pointer-events: none;
-        z-index: 10;
         background: rgb(255, 255, 255);
         width: 65%;
         height: 100vh;
         position: absolute;
         top: 60px;
         right: -65%;
-        transition:  .7s ease-in-out;
+        transition: .7s ease-in-out;
+        -webkit-transition: .7s ease-in-out;
         img{
             position: absolute;
             right: 0;
@@ -156,23 +156,23 @@ $primaryColor: #2d9cb3;
                 &.active{
                     :nth-child(1){
                         opacity: 1;
-                        transition: all 1s ease-in-out 0.2s;
+                        transition: 1s ease-in-out 0.2s;
                     }
                     :nth-child(2){
                         opacity: 1;
-                        transition: all 1s ease-in-out 0.4s;
+                        transition: 1s ease-in-out 0.4s;
                     }
                     :nth-child(3){
                         opacity: 1;
-                        transition: all 1s ease-in-out 0.6s;
+                        transition: 1s ease-in-out 0.6s;
                     }
                     :nth-child(4){
                         opacity: 1;
-                        transition: all 1s ease-in-out 0.8s;
+                        transition: 1s ease-in-out 0.8s;
                     }
                     :nth-child(5){
                         opacity: 1;
-                        transition: all 1s ease-in-out 1s;
+                        transition: 1s ease-in-out 1s;
                     }
                 }
             }
